Organize EBI and GISAID analysis into separate folders

--- a/src/EBI_analysis/analyze_missing_values.ipynb
+++ b/src/EBI_analysis/analyze_missing_values.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv('../data/metadata_EBI_preprocessed.csv',\n",
+    "df = pd.read_csv('../../data/metadata_EBI_preprocessed.csv',\n",
     "                 dtype={'collected_by': object,\n",
     "                        'collection_date': object,\n",
     "                        'culture_collection': object,\n",
@@ -89,7 +89,7 @@
     "import json\n",
     "\n",
     "# Load number of inhabitants per country (taken from Wikipedia)\n",
-    "with open('json_data/country_inhabitants.json') as f:\n",
+    "with open('../helper_dicts/country_inhabitants.json') as f:\n",
     "    country_inhabitants_map = json.load(f)"
    ],
    "metadata": {
@@ -106,8 +106,8 @@
    "source": [
     "import os\n",
     "\n",
-    "if not os.path.isdir('../plots/missing_vals_per_col'):\n",
-    "    os.mkdir('../plots/missing_vals_per_col')"
+    "if not os.path.isdir('../../plots/missing_vals_per_col'):\n",
+    "    os.mkdir('../../plots/missing_vals_per_col')"
    ],
    "metadata": {
     "collapsed": false,
@@ -153,7 +153,7 @@
     "        patch.set_height(new_height)\n",
     "    plt.gca().set_ylim([0, max_y + (max_y / 20)])\n",
     "\n",
-    "    plt.savefig(f'../plots/missing_vals_per_col/country_count_of_missing_vals_in_{col}_normalized.png', dpi=300)\n",
+    "    plt.savefig(f'../../plots/missing_vals_per_col/country_count_of_missing_vals_in_{col}_normalized.png', dpi=300)\n",
     "    plt.close()"
    ],
    "metadata": {
@@ -283,8 +283,8 @@
    "source": [
     "import os\n",
     "\n",
-    "if not os.path.isdir('../plots/missing_vals_per_country'):\n",
-    "    os.mkdir('../plots/missing_vals_per_country')"
+    "if not os.path.isdir('../../plots/missing_vals_per_country'):\n",
+    "    os.mkdir('../../plots/missing_vals_per_country')"
    ],
    "metadata": {
     "collapsed": false,
@@ -317,7 +317,7 @@
     "    plt.yticks(fontsize=14)\n",
     "\n",
     "    plt.tight_layout()\n",
-    "    plt.savefig(f'../plots/missing_vals_per_country/missing_vals_for_{country.replace(\" \", \"_\")}.png', dpi=300)\n",
+    "    plt.savefig(f'../../plots/missing_vals_per_country/missing_vals_for_{country.replace(\" \", \"_\")}.png', dpi=300)\n",
     "    plt.close()"
    ],
    "metadata": {
