--- a/src/EBI_analysis/analyze_us_states.ipynb
+++ b/src/EBI_analysis/analyze_us_states.ipynb
@@ -67,7 +67,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv('../data/metadata_EBI_preprocessed.csv',\n",
+    "df = pd.read_csv('../../data/metadata_EBI_preprocessed.csv',\n",
     "                 dtype={'collected_by': object,\n",
     "                        'collection_date': object,\n",
     "                        'culture_collection': object,\n",
@@ -204,7 +204,7 @@
    "source": [
     "import json\n",
     "\n",
-    "with open('json_data/usa_states.json') as f:\n",
+    "with open('../helper_dicts/usa_states.json') as f:\n",
     "    usa_states = json.load(f)\n",
     "\n",
     "# Note: \"District of Columbia (Washington, D.C.)\" does not belong to any state and therefore is listed additionally to 50 existing states\n",
@@ -324,7 +324,7 @@
    "execution_count": 39,
    "outputs": [],
    "source": [
-    "df_usa.to_csv('../data/metadata_EBI_usa_states.csv', index=False)"
+    "df_usa.to_csv('../../data/metadata_EBI_usa_states.csv', index=False)"
    ],
    "metadata": {
     "collapsed": false,
@@ -352,7 +352,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df_usa = pd.read_csv('../data/metadata_EBI_usa_states.csv')"
+    "df_usa = pd.read_csv('../../data/metadata_EBI_usa_states.csv')"
    ],
    "metadata": {
     "collapsed": false,
@@ -397,7 +397,7 @@
     "# Shapefile taken from https://alicia.data.socrata.com/Government/States-21basic/jhnu-yfrj\n",
     "# .dbf, .prj and .\n",
     "# shx file have to be in same folder\n",
-    "usa_geo = gpd.read_file('../data/geo_usa_states.shp')\n",
+    "usa_geo = gpd.read_file('../../data/geo_usa_states.shp')\n",
     "usa_geo.head()"
    ],
    "metadata": {
@@ -525,7 +525,7 @@
     "plt.yticks(fontsize=14)\n",
     "\n",
     "plt.tight_layout()\n",
-    "fig.savefig('../plots/state_counts_barchart.png', dpi=300)\n",
+    "fig.savefig('../../plots/state_counts_barchart.png', dpi=300)\n",
     "plt.close()"
    ],
    "metadata": {
@@ -560,7 +560,7 @@
     "plt.yticks(fontsize=14)\n",
     "\n",
     "plt.tight_layout()\n",
-    "fig.savefig('../plots/state_counts_map.png', dpi=300)\n",
+    "fig.savefig('../../plots/state_counts_map.png', dpi=300)\n",
     "plt.close()"
    ],
    "metadata": {
@@ -601,7 +601,7 @@
     "plt.yticks(fontsize=14)\n",
     "\n",
     "plt.tight_layout()\n",
-    "fig.savefig('../plots/state_counts_map_reduced.png', dpi=300)\n",
+    "fig.savefig('../../plots/state_counts_map_reduced.png', dpi=300)\n",
     "plt.close()"
    ],
    "metadata": {
@@ -630,7 +630,7 @@
    "source": [
     "import json\n",
     "\n",
-    "with open('json_data/usa_states_inhabitants.json') as f:\n",
+    "with open('../helper_dicts/usa_states_inhabitants.json') as f:\n",
     "    state_inhabitants = json.load(f)\n",
     "\n",
     "usa_geo['n_inhabitants'] = usa_geo['state_name'].map(state_inhabitants)"
@@ -682,7 +682,7 @@
     "plt.yticks(fontsize=14)\n",
     "\n",
     "plt.tight_layout()\n",
-    "fig.savefig('../plots/state_counts_by_inhabitants_barchart.png', dpi=300)\n",
+    "fig.savefig('../../plots/state_counts_by_inhabitants_barchart.png', dpi=300)\n",
     "plt.close()"
    ],
    "metadata": {
@@ -717,7 +717,7 @@
     "plt.yticks(fontsize=14)\n",
     "\n",
     "plt.tight_layout()\n",
-    "fig.savefig('../plots/state_counts_by_inhabitants_map.png', dpi=300)\n",
+    "fig.savefig('../../plots/state_counts_by_inhabitants_map.png', dpi=300)\n",
     "plt.close()"
    ],
    "metadata": {
@@ -778,7 +778,7 @@
    "source": [
     "# Taken from https://github.com/CSSEGISandData/COVID-19/blob/master/csse_covid_19_data/csse_covid_19_daily_reports_us/01-07-2022.csv\n",
     "# Documentation at https://github.com/CSSEGISandData/COVID-19/tree/master/csse_covid_19_data#field-description-1\n",
-    "usa_states_hopkins = pd.read_csv('../data/JHU_usa_states.csv')\n",
+    "usa_states_hopkins = pd.read_csv('../../data/JHU_usa_states.csv')\n",
     "usa_states_hopkins.info()"
    ],
    "metadata": {
@@ -804,7 +804,7 @@
    "source": [
     "import json\n",
     "\n",
-    "with open('json_data/usa_states.json') as f:\n",
+    "with open('../helper_dicts/usa_states.json') as f:\n",
     "    usa_states = json.load(f)\n",
     "\n",
     "states_hopkins = usa_states_hopkins['Province_State'].tolist()\n",
@@ -865,7 +865,7 @@
     "plt.yticks(fontsize=14)\n",
     "\n",
     "plt.tight_layout()\n",
-    "fig.savefig('../plots/state_counts_by_infections_barchart.png', dpi=300)\n",
+    "fig.savefig('../../plots/state_counts_by_infections_barchart.png', dpi=300)\n",
     "plt.close()"
    ],
    "metadata": {
@@ -901,7 +901,7 @@
     "plt.yticks(fontsize=14)\n",
     "\n",
     "plt.tight_layout()\n",
-    "fig.savefig('../plots/state_counts_by_infections_map.png', dpi=300)\n",
+    "fig.savefig('../../plots/state_counts_by_infections_map.png', dpi=300)\n",
     "plt.close()"
    ],
    "metadata": {
