--- a/src/EBI_analysis/create_general_insights.ipynb
+++ b/src/EBI_analysis/create_general_insights.ipynb
@@ -75,7 +75,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv('../data/metadata_EBI_preprocessed.csv',\n",
+    "df = pd.read_csv('../../data/metadata_EBI_preprocessed.csv',\n",
     "                 dtype={'collected_by': object,\n",
     "                        'collection_date': object,\n",
     "                        'culture_collection': object,\n",
@@ -191,12 +191,12 @@
     "                                                           'cramers': {'calculate': False}})\n",
     "\n",
     "# Add definitions\n",
-    "with open('json_data/definitions_EBI_metadata.json') as f:\n",
+    "with open('../helper_dicts/definitions_EBI_metadata.json') as f:\n",
     "    definitions_ebi_metadata = json.load(f)\n",
     "profile_ebi.config.variables.descriptions = definitions_ebi_metadata\n",
     "\n",
     "# Save as html\n",
-    "profile_ebi.to_file(output_file='../data/metadata_EBI_profile.html')"
+    "profile_ebi.to_file(output_file='../../data/metadata_EBI_profile.html')"
    ]
   },
   {
@@ -244,7 +244,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "with open('json_data/country_inhabitants_map.json') as f:\n",
+    "with open('../helper_dicts/country_inhabitants_map.json') as f:\n",
     "    country_inhabitants_map = json.load(f)"
    ],
    "metadata": {
@@ -261,8 +261,8 @@
    "source": [
     "import os\n",
     "\n",
-    "if not os.path.isdir('../plots/general_country_counts'):\n",
-    "    os.mkdir('../plots/general_country_counts')"
+    "if not os.path.isdir('../../plots/general_country_counts'):\n",
+    "    os.mkdir('../../plots/general_country_counts')"
    ],
    "metadata": {
     "collapsed": false,
@@ -318,7 +318,7 @@
     "\n",
     "    plt.gca().set_ylim([0, max_y + (max_y / 20)])\n",
     "\n",
-    "    fig.savefig(f'../plots/general_country_counts/popular_countries_count_by_{hue}_normalized.png', dpi=300)\n",
+    "    fig.savefig(f'../../plots/general_country_counts/popular_countries_count_by_{hue}_normalized.png', dpi=300)\n",
     "    plt.close()"
    ]
   },
@@ -367,7 +367,7 @@
     "        patch.set_height(new_height)\n",
     "    plt.gca().set_ylim([0, max_y + (max_y / 20)])\n",
     "\n",
-    "    fig.savefig(f'../plots/general_country_counts/rare_countries_count_by_{hue}_normalized.png', dpi=300)\n",
+    "    fig.savefig(f'../../plots/general_country_counts/rare_countries_count_by_{hue}_normalized.png', dpi=300)\n",
     "    plt.close()"
    ]
   },
@@ -402,7 +402,7 @@
    ],
    "source": [
     "# Taken from https://github.com/CSSEGISandData/COVID-19/blob/master/csse_covid_19_data/csse_covid_19_time_series/time_series_covid19_confirmed_global.csv\n",
-    "countries_ts = pd.read_csv('../data/JHU_countries_time_series.csv')\n",
+    "countries_ts = pd.read_csv('../../data/JHU_countries_time_series.csv')\n",
     "countries_ts.info()  # 280 entries, 723 columns"
    ],
    "metadata": {
@@ -678,7 +678,7 @@
    "execution_count": 17,
    "outputs": [],
    "source": [
-    "countries_ts.to_csv('../data/JHU_countries_time_series_preprocessed.csv', index=False)"
+    "countries_ts.to_csv('../../data/JHU_countries_time_series_preprocessed.csv', index=False)"
    ],
    "metadata": {
     "collapsed": false,
@@ -704,7 +704,7 @@
    "execution_count": 33,
    "outputs": [],
    "source": [
-    "countries_ts = pd.read_csv('../data/JHU_countries_time_series_preprocessed.csv')"
+    "countries_ts = pd.read_csv('../../data/JHU_countries_time_series_preprocessed.csv')"
    ],
    "metadata": {
     "collapsed": false,
@@ -843,7 +843,7 @@
     "plt.yticks(fontsize=14)\n",
     "\n",
     "plt.tight_layout()\n",
-    "fig.savefig('../plots/country_counts_by_infections.png', dpi=300)\n",
+    "fig.savefig('../../plots/country_counts_by_infections.png', dpi=300)\n",
     "plt.close()"
    ],
    "metadata": {
@@ -1302,8 +1302,8 @@
    "source": [
     "import os\n",
     "\n",
-    "if not os.path.isdir('../plots/n_samples_by_infections_weekly'):\n",
-    "    os.mkdir('../plots/n_samples_by_infections_weekly')"
+    "if not os.path.isdir('../../plots/n_samples_by_infections_weekly'):\n",
+    "    os.mkdir('../../plots/n_samples_by_infections_weekly')"
    ],
    "metadata": {
     "collapsed": false,
@@ -1352,7 +1352,7 @@
     "    plt.yticks(fontsize=14)\n",
     "\n",
     "    plt.tight_layout()\n",
-    "    fig.savefig(f'../plots/n_samples_by_infections_weekly/weekly_count_by_infections_{country}.png', dpi=300)\n",
+    "    fig.savefig(f'../../plots/n_samples_by_infections_weekly/weekly_count_by_infections_{country}.png', dpi=300)\n",
     "    plt.close()"
    ],
    "metadata": {
@@ -1508,8 +1508,8 @@
    "execution_count": 42,
    "outputs": [],
    "source": [
-    "if not os.path.isdir('../plots/n_samples_by_infections_weekly_shifted'):\n",
-    "    os.mkdir('../plots/n_samples_by_infections_weekly_shifted')"
+    "if not os.path.isdir('../../plots/n_samples_by_infections_weekly_shifted'):\n",
+    "    os.mkdir('../../plots/n_samples_by_infections_weekly_shifted')"
    ],
    "metadata": {
     "collapsed": false,
@@ -1539,7 +1539,7 @@
     "    plt.yticks(fontsize=14)\n",
     "\n",
     "    plt.tight_layout()\n",
-    "    fig.savefig(f'../plots/n_samples_by_infections_weekly_shifted/weekly_count_by_last_weeks_infections_{country}.png', dpi=300)\n",
+    "    fig.savefig(f'../../plots/n_samples_by_infections_weekly_shifted/weekly_count_by_last_weeks_infections_{country}.png', dpi=300)\n",
     "    plt.close()"
    ],
    "metadata": {
@@ -1554,8 +1554,8 @@
    "execution_count": 174,
    "outputs": [],
    "source": [
-    "plotdata.to_csv('../data/weekly_sample_and_infection_counts_of_countries.csv')\n",
-    "# can be read with: pd.read_csv('../data/weekly_sample_and_infection_counts_of_countries.csv', index_col=0)"
+    "plotdata.to_csv('../../data/weekly_sample_and_infection_counts_of_countries.csv')\n",
+    "# can be read with: pd.read_csv('../../data/weekly_sample_and_infection_counts_of_countries.csv', index_col=0)"
    ],
    "metadata": {
     "collapsed": false,
@@ -1598,8 +1598,8 @@
    "source": [
     "import os\n",
     "\n",
-    "if not os.path.isdir('../plots/n_samples_over_time'):\n",
-    "    os.mkdir('../plots/n_samples_over_time')"
+    "if not os.path.isdir('../../plots/n_samples_over_time'):\n",
+    "    os.mkdir('../../plots/n_samples_over_time')"
    ],
    "metadata": {
     "collapsed": false,
@@ -1638,7 +1638,7 @@
     "plt.yticks(fontsize=14)\n",
     "\n",
     "plt.tight_layout()\n",
-    "fig.savefig('../plots/n_samples_over_time/collection_date_density.png', dpi=300)\n",
+    "fig.savefig('../../plots/n_samples_over_time/collection_date_density.png', dpi=300)\n",
     "plt.close()"
    ],
    "metadata": {
@@ -1705,7 +1705,7 @@
     "plt.yticks(fontsize=14)\n",
     "\n",
     "plt.tight_layout()\n",
-    "fig.savefig('../plots/n_samples_over_time/collection_date_count.png', dpi=300)\n",
+    "fig.savefig('../../plots/n_samples_over_time/collection_date_count.png', dpi=300)\n",
     "plt.close()\n",
     "\n",
     "# -> temporal bias around April 2021 and Winter 2021\n",
@@ -1819,7 +1819,7 @@
     "    plt.yticks(fontsize=14)\n",
     "\n",
     "    plt.tight_layout()\n",
-    "    fig.savefig(f'../plots/n_samples_over_time/collection_date_count_{str(country).replace(\" \", \"_\")}.png', dpi=300)\n",
+    "    fig.savefig(f'../../plots/n_samples_over_time/collection_date_count_{str(country).replace(\" \", \"_\")}.png', dpi=300)\n",
     "    plt.close()\n",
     "\n",
     "# -> USA: raise of cases from end of October 2020 until February 2021 not recognisable\n",
@@ -2012,7 +2012,7 @@
     "        label.set_visible(False)\n",
     "\n",
     "plt.tight_layout()\n",
-    "fig.savefig('../plots/age_distribution.png', dpi=300)\n",
+    "fig.savefig('../../plots/age_distribution.png', dpi=300)\n",
     "plt.close()"
    ],
    "metadata": {
@@ -2052,8 +2052,8 @@
    "source": [
     "import os\n",
     "\n",
-    "if not os.path.isdir('../plots/age_distribution'):\n",
-    "    os.mkdir('../plots/age_distribution')"
+    "if not os.path.isdir('../../plots/age_distribution'):\n",
+    "    os.mkdir('../../plots/age_distribution')"
    ],
    "metadata": {
     "collapsed": false,
@@ -2087,7 +2087,7 @@
     "            label.set_visible(False)\n",
     "\n",
     "    plt.tight_layout()\n",
-    "    fig.savefig(f'../plots/age_distribution/age_distribution_{country}.png', dpi=300)\n",
+    "    fig.savefig(f'../../plots/age_distribution/age_distribution_{country}.png', dpi=300)\n",
     "    plt.close()\n",
     "\n",
     "# USA:\n",
