--- a/src/EBI_analysis/preprocess_metadata.ipynb
+++ b/src/EBI_analysis/preprocess_metadata.ipynb
@@ -89,7 +89,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "metadata_ebi = pd.read_csv('../data/results_sequence_tsv.txt',\n",
+    "metadata_ebi = pd.read_csv('../../data/results_sequence_tsv.txt',\n",
     "                           sep='\\t',\n",
     "                           dtype={'collected_by': object,\n",
     "                                  'collection_date': object,\n",
@@ -205,7 +205,7 @@
     "metadata_ebi_relevant_cols['country_and_region'] = metadata_ebi_relevant_cols['country_and_region'].fillna('')\n",
     "\n",
     "# Save as CSV\n",
-    "metadata_ebi_relevant_cols.to_csv('../data/metadata_EBI_relevant_cols.csv', index=False)"
+    "metadata_ebi_relevant_cols.to_csv('../../data/metadata_EBI_relevant_cols.csv', index=False)"
    ]
   },
   {
@@ -274,7 +274,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv('../data/metadata_EBI_relevant_cols.csv',\n",
+    "df = pd.read_csv('../../data/metadata_EBI_relevant_cols.csv',\n",
     "                 dtype={'collected_by': object,\n",
     "                        'collection_date': object,\n",
     "                        'culture_collection': object,\n",
@@ -736,7 +736,7 @@
     "df['country'] = df['country'].replace(np.nan, 'Unknown')\n",
     "\n",
     "# Load number of inhabitants per country (taken from Wikipedia)\n",
-    "with open('json_data/country_inhabitants.json') as f:\n",
+    "with open('../helper_dicts/country_inhabitants.json') as f:\n",
     "    country_inhabitants_map = json.load(f)"
    ],
    "metadata": {
@@ -835,7 +835,7 @@
    },
    "outputs": [],
    "source": [
-    "df.to_csv('../data/metadata_EBI_preprocessed.csv', index=False)"
+    "df.to_csv('../../data/metadata_EBI_preprocessed.csv', index=False)"
    ]
   }
  ],
